--- a/style.css
+++ b/style.css
@@ -1,16 +1,50 @@
 body{
-  background-image: url(restaurant.png);
-}
-li{
-  background-color: grey;
+  background-color: white;
+
 
 }
-li>p{
+li{
+  text-align: center;
+  list-style-type: none;
+}
+li>a{
   display: inline-block;
-  border: 1px solid red;
+  border: 1px solid #F5554A;
   width: 100px;
   text-align: center;
+  padding: 10px;
+  color: #FFFFFF;
+  background-color: #F5554A;
+  text-decoration: none;
+  margin: 5px 5px;
+  opacity: 1;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+a:hover{
+  text-decoration: underline;
+  background-color: #FF3116;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+
 }
 .main{
-  padding: 10px;
+  font-family: Helvetica;
+  max-width: 700px;
+  margin: auto;
+}
+
+.main2{
+  font-family: Helvetica;
+  max-width: 700px;
+  margin: auto;
+}
+p{
+  text-align: justify;
 }
