--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ li>a{
   -ms-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
-a:hover{
+li>a:hover{
   text-decoration: underline;
   background-color: #FF3116;
   -webkit-transition: all 0.5s ease;
@@ -45,6 +45,23 @@ a:hover{
   max-width: 700px;
   margin: auto;
 }
+.main3{
+  font-family: Helvetica;
+  max-width: 700px;
+  margin: auto;
+}
 p{
   text-align: justify;
+}
+.verticalMenu>a{
+  text-align: left;
+  padding: 10px;
+  border: 1px solid black;
+  margin: 5px;
+}
+.verticalMenu{
+  position: fixed;
+  display: grid;
+  border: 1px solid #F5554A;
+  max-width: 100px;
 }
