--- a/style.css
+++ b/style.css
@@ -1,94 +1,60 @@
 body{
-  background-color: white;
+  margin: 0;
+  padding: 0;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0px;
+    overflow: hidden;
+
+    text-align: center;
 }
 
-li{
-  text-align: center;
-  list-style-type: none;
-}
-li>a{
-  font-family: 'Lobster', cursive;
+li {
   display: inline-block;
-  border: 1px solid #F5554A;
-  width: 100px;
+}
+
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: helvetica;
+    background-color:#F5554A;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+    background-color: #FF3116;
+}
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.show {
+  display:block;
+}
+.main,.main2,.main3,.main4,.main5,.main6{
+  max-width: 700px;
   text-align: center;
-  padding: 10px;
-  color: #FFFFFF;
-  background-color: #F5554A;
-  text-decoration: none;
-  margin: 5px 5px;
-  opacity: 1;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-li>a:hover{
-  text-decoration: underline;
-  background-color: #FF3116;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-
-}
-.main{
-  font-family: Helvetica;
-  max-width: 700px;
-  margin: auto;
-}
-
-.main2{
-  font-family: Helvetica;
-  max-width: 700px;
-  margin: auto;
-}
-.main3{
-  font-family: Helvetica;
-  max-width: 700px;
-  margin: auto;
-}
-.main4{
-  font-family: Helvetica;
-  max-width: 700px;
-  margin: auto;
-}
-.main5{
-  font-family: Helvetica;
-  max-width: 700px;
-  margin: auto;
-}
-p{
-  text-align: justify;
-}
-.verticalMenu>a{
-  text-align: left;
-  padding: 10px;
-  border: 1px solid black;
-  margin: 5px;
-}
-.verticalMenu{
-  position: fixed;
-  display: grid;
-  border: 1px solid #F5554A;
-  max-width: 100px;
-}
-@media screen and (max-width: 920px) {
-  .main{
-    padding-left: 110px;
-  }
-  .main2{
-    padding-left: 110px;
-  }
-  .main3{
-    padding-left: 110px;
-  }
-  .main4{
-    padding-left: 110px;
-  }
-  .main5{
-    padding-left: 110px;
-  }
 }
